// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConnectModal with guide > should display default guide 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-11xg00t ant-web3-connect-modal-root"
    >
      <div
        class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-11xg00t ant-web3-connect-modal css-dev-only-do-not-override-11xg00t ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 797px; transform-origin: 0px 0px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            style="outline: none;"
            tabindex="-1"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-11xg00t"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-web3-connect-modal-body css-dev-only-do-not-override-11xg00t"
                    >
                      <div
                        class="ant-web3-connect-modal-list-panel"
                      >
                        <div
                          class="ant-web3-connect-modal-header"
                        >
                          <h2
                            class="ant-web3-connect-modal-title"
                          >
                            ConnectModal
                          </h2>
                        </div>
                        <div
                          class="ant-web3-connect-modal-list-container"
                        >
                          <div
                            class="ant-web3-connect-modal-wallet-list"
                          >
                            <div
                              class="ant-web3-connect-modal-group"
                            >
                              <div
                                class="ant-web3-connect-modal-group-title"
                              >
                                Popular
                              </div>
                              <div
                                class="ant-web3-connect-modal-group-content"
                              >
                                <div
                                  class="ant-list ant-list-split css-dev-only-do-not-override-11xg00t"
                                >
                                  <div
                                    class="ant-spin-nested-loading css-dev-only-do-not-override-11xg00t"
                                  >
                                    <div
                                      class="ant-spin-container"
                                    >
                                      <ul
                                        class="ant-list-items"
                                      >
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=0"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet3"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=3"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet3
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                      </ul>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-group"
                            >
                              <div
                                class="ant-web3-connect-modal-group-title"
                              >
                                More
                              </div>
                              <div
                                class="ant-web3-connect-modal-group-content"
                              >
                                <div
                                  class="ant-list ant-list-split css-dev-only-do-not-override-11xg00t"
                                >
                                  <div
                                    class="ant-spin-nested-loading css-dev-only-do-not-override-11xg00t"
                                  >
                                    <div
                                      class="ant-spin-container"
                                    >
                                      <ul
                                        class="ant-list-items"
                                      >
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet2"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=1"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet2
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet4"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet4
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet5"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet5
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet6"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet6
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet6"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet6
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                      </ul>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-web3-connect-modal-footer"
                        >
                          Powered by AntChain
                        </div>
                      </div>
                      <div
                        class="ant-web3-connect-modal-main-panel"
                      >
                        <div
                          class="ant-web3-connect-modal-guide-panel"
                        >
                          <h2
                            class="ant-web3-connect-modal-guide-title"
                          >
                            What is a Wallet?
                          </h2>
                          <div
                            class="ant-web3-connect-modal-guide-list"
                          >
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-11xg00t"
                              >
                                <img
                                  src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*ApSUSaoUa_sAAAAAAAAAAAAADlrGAQ/original"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  Manage your private key and assets
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Manage your private key and the assets of the corresponding chain address
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-11xg00t"
                              >
                                <img
                                  src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*3lD7QpnbCPcAAAAAAAAAAAAADlrGAQ/original"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  Help you connect to DApp
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Authorize DApp to get your address, similar to login
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-11xg00t"
                              >
                                <img
                                  src="https://mdn.alipayobjects.com/huamei_mutawc/afts/img/A*gTROQqEY_TcAAAAAAAAAAAAADlrGAQ/original"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  Call smart contract
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Through authorization of private key signature, initiate interaction with smart contract on the chain
                                </div>
                              </div>
                            </div>
                          </div>
                          <a
                            class="ant-btn css-dev-only-do-not-override-11xg00t ant-btn-default ant-btn-block ant-web3-connect-modal-more"
                            href="https://ethereum.org/en/wallets/"
                            tabindex="0"
                            target="_blank"
                          >
                            <span>
                              Learn More
                            </span>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ConnectModal with guide > should render in dark mode 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-ysyo1 ant-web3-connect-modal-root"
    >
      <div
        class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-ysyo1 ant-web3-connect-modal css-dev-only-do-not-override-ysyo1 ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 797px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            style="outline: none;"
            tabindex="-1"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-ysyo1"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-web3-connect-modal-body css-dev-only-do-not-override-ysyo1"
                    >
                      <div
                        class="ant-web3-connect-modal-list-panel"
                      >
                        <div
                          class="ant-web3-connect-modal-header"
                        >
                          <h2
                            class="ant-web3-connect-modal-title"
                          >
                            ConnectModal
                          </h2>
                        </div>
                        <div
                          class="ant-web3-connect-modal-list-container"
                        >
                          <div
                            class="ant-web3-connect-modal-wallet-list"
                          >
                            <div
                              class="ant-web3-connect-modal-group"
                            >
                              <div
                                class="ant-web3-connect-modal-group-title"
                              >
                                Popular
                              </div>
                              <div
                                class="ant-web3-connect-modal-group-content"
                              >
                                <div
                                  class="ant-list ant-list-split css-dev-only-do-not-override-ysyo1"
                                >
                                  <div
                                    class="ant-spin-nested-loading css-dev-only-do-not-override-ysyo1"
                                  >
                                    <div
                                      class="ant-spin-container"
                                    >
                                      <ul
                                        class="ant-list-items"
                                      >
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=0"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-ysyo1"
                                            >
                                              Test Wallet
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-ysyo1 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet3"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=3"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-ysyo1"
                                            >
                                              Test Wallet3
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-ysyo1 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                      </ul>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-group"
                            >
                              <div
                                class="ant-web3-connect-modal-group-title"
                              >
                                More
                              </div>
                              <div
                                class="ant-web3-connect-modal-group-content"
                              >
                                <div
                                  class="ant-list ant-list-split css-dev-only-do-not-override-ysyo1"
                                >
                                  <div
                                    class="ant-spin-nested-loading css-dev-only-do-not-override-ysyo1"
                                  >
                                    <div
                                      class="ant-spin-container"
                                    >
                                      <ul
                                        class="ant-list-items"
                                      >
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet2"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=1"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-ysyo1"
                                            >
                                              Test Wallet2
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-ysyo1 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet4"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-ysyo1"
                                            >
                                              Test Wallet4
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-ysyo1 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet5"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-ysyo1"
                                            >
                                              Test Wallet5
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-ysyo1 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet6"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-ysyo1"
                                            >
                                              Test Wallet6
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-ysyo1 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet6"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-ysyo1"
                                            >
                                              Test Wallet6
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-ysyo1 ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                      </ul>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-web3-connect-modal-footer"
                        >
                          Powered by AntChain
                        </div>
                      </div>
                      <div
                        class="ant-web3-connect-modal-main-panel"
                      >
                        <div
                          class="ant-web3-connect-modal-guide-panel"
                        >
                          <h2
                            class="ant-web3-connect-modal-guide-title"
                          >
                            What is a Wallet?
                          </h2>
                          <div
                            class="ant-web3-connect-modal-guide-list"
                          >
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-ysyo1"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=4"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A Home for your Digital Assets
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Wallets are used to send, receive, store, and display digital assets like Ethereum and NFTs.
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-ysyo1"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=5"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A New Way to Log In
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Instead of creating new accounts and passwords on every website, just connect your wallet.
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-ysyo1"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=5"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A New Way to Log In2
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Instead of creating new accounts and passwords on every website, just connect your wallet.
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-ysyo1"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=5"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A New Way to Log In3
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Instead of creating new accounts and passwords on every website, just connect your wallet.
                                </div>
                              </div>
                            </div>
                          </div>
                          <a
                            class="ant-btn css-dev-only-do-not-override-ysyo1 ant-btn-default ant-btn-block ant-web3-connect-modal-more"
                            href="https://test.com/xxx"
                            tabindex="0"
                            target="_blank"
                          >
                            <span>
                              Learn More
                            </span>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ConnectModal with guide > should render in light mode 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-11xg00t ant-web3-connect-modal-root"
    >
      <div
        class="ant-modal-mask ant-fade-appear ant-fade-appear-start ant-fade"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-11xg00t ant-web3-connect-modal css-dev-only-do-not-override-11xg00t ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 797px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            style="outline: none;"
            tabindex="-1"
          >
            <div
              class="ant-modal-content"
            >
              <button
                aria-label="Close"
                class="ant-modal-close"
                type="button"
              >
                <span
                  class="ant-modal-close-x"
                >
                  <span
                    aria-label="close"
                    class="anticon anticon-close ant-modal-close-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="close"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <div
                class="ant-modal-body"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-11xg00t"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-web3-connect-modal-body css-dev-only-do-not-override-11xg00t"
                    >
                      <div
                        class="ant-web3-connect-modal-list-panel"
                      >
                        <div
                          class="ant-web3-connect-modal-header"
                        >
                          <h2
                            class="ant-web3-connect-modal-title"
                          >
                            ConnectModal
                          </h2>
                        </div>
                        <div
                          class="ant-web3-connect-modal-list-container"
                        >
                          <div
                            class="ant-web3-connect-modal-wallet-list"
                          >
                            <div
                              class="ant-web3-connect-modal-group"
                            >
                              <div
                                class="ant-web3-connect-modal-group-title"
                              >
                                Popular
                              </div>
                              <div
                                class="ant-web3-connect-modal-group-content"
                              >
                                <div
                                  class="ant-list ant-list-split css-dev-only-do-not-override-11xg00t"
                                >
                                  <div
                                    class="ant-spin-nested-loading css-dev-only-do-not-override-11xg00t"
                                  >
                                    <div
                                      class="ant-spin-container"
                                    >
                                      <ul
                                        class="ant-list-items"
                                      >
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=0"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet3"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=3"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet3
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                      </ul>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-group"
                            >
                              <div
                                class="ant-web3-connect-modal-group-title"
                              >
                                More
                              </div>
                              <div
                                class="ant-web3-connect-modal-group-content"
                              >
                                <div
                                  class="ant-list ant-list-split css-dev-only-do-not-override-11xg00t"
                                >
                                  <div
                                    class="ant-spin-nested-loading css-dev-only-do-not-override-11xg00t"
                                  >
                                    <div
                                      class="ant-spin-container"
                                    >
                                      <ul
                                        class="ant-list-items"
                                      >
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet2"
                                              class="ant-web3-connect-modal-img"
                                              src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=1"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet2
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet4"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet4
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet5"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet5
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet6"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet6
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                        <li
                                          class="ant-list-item ant-web3-connect-modal-wallet-item"
                                        >
                                          <div
                                            class="ant-web3-connect-modal-content"
                                          >
                                            <img
                                              alt="Test Wallet6"
                                              class="ant-web3-connect-modal-img"
                                            />
                                            <span
                                              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line ant-web3-connect-modal-name css-dev-only-do-not-override-11xg00t"
                                            >
                                              Test Wallet6
                                            </span>
                                          </div>
                                          <div
                                            class="ant-space css-dev-only-do-not-override-11xg00t ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
                                          >
                                            <div
                                              class="ant-space-item"
                                            />
                                          </div>
                                        </li>
                                      </ul>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="ant-web3-connect-modal-footer"
                        >
                          Powered by AntChain
                        </div>
                      </div>
                      <div
                        class="ant-web3-connect-modal-main-panel"
                      >
                        <div
                          class="ant-web3-connect-modal-guide-panel"
                        >
                          <h2
                            class="ant-web3-connect-modal-guide-title"
                          >
                            What is a Wallet?
                          </h2>
                          <div
                            class="ant-web3-connect-modal-guide-list"
                          >
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-11xg00t"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=4"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A Home for your Digital Assets
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Wallets are used to send, receive, store, and display digital assets like Ethereum and NFTs.
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-11xg00t"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=5"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A New Way to Log In
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Instead of creating new accounts and passwords on every website, just connect your wallet.
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-11xg00t"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=5"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A New Way to Log In2
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Instead of creating new accounts and passwords on every website, just connect your wallet.
                                </div>
                              </div>
                            </div>
                            <div
                              class="ant-web3-connect-modal-guide-item"
                            >
                              <span
                                class="ant-avatar ant-avatar-square ant-avatar-image ant-web3-connect-modal-guide-item-icon css-dev-only-do-not-override-11xg00t"
                              >
                                <img
                                  src="https://xsgames.co/randomusers/avatar.php?g=pixel&key=5"
                                />
                              </span>
                              <div
                                class="ant-web3-connect-modal-guide-item-content"
                              >
                                <h3
                                  class="ant-web3-connect-modal-guide-item-title"
                                >
                                  A New Way to Log In3
                                </h3>
                                <div
                                  class="ant-web3-connect-modal-guide-item-description"
                                >
                                  Instead of creating new accounts and passwords on every website, just connect your wallet.
                                </div>
                              </div>
                            </div>
                          </div>
                          <a
                            class="ant-btn css-dev-only-do-not-override-11xg00t ant-btn-default ant-btn-block ant-web3-connect-modal-more"
                            href="https://test.com/xxx"
                            tabindex="0"
                            target="_blank"
                          >
                            <span>
                              Learn More
                            </span>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
